# plexus

./: README.md  pyproject.toml  setup_mamba.sh
figure_scripts/: Figure_README.md
figure_scripts/Figure1/: dmso_traces.npy  figure_1.py  tent_traces.npy  ttx_vs_dmso_time_series.csv
figure_scripts/Figure2/: figure_2.py
figure_scripts/Figure3/: figure_3.py
figure_scripts/Figure4/: figure_4.py
figure_scripts/Figure5/: figure_5.py
figure_scripts/Figure6/: figure_6.py
plexus/ablation_studies/: ablation_analysis.py
plexus/embedding_utils/: opls.py  preprocessing.py  signal_processing_features.py  zarr_utils.py
plexus/manual_featurization/: feature_extraction.py
plexus/ml_baselines/: cnn_autoencoder_neuroactive.py  cnn_autoencoder_simulation.py  pretrained_ts_model_neuroactive.py  pretrained_ts_model_simulation.py
plexus/ssl_inference/: inference.py
plexus/ssl_inference/utils/: inference_data_utils.py  model_load.py
plexus/ssl_training/: datasets.py  launch_training.py
plexus/ssl_training/config/: crispri_screen_1cell.yaml  crispri_screen_8cell.yaml  full_screen_1cell.yaml  full_screen_8cell.yaml  neuroactive_8cell.yaml  neuroactive_8cell_ablation.yaml  simulation_16cell.yaml  simulation_1cell.yaml  simulation_4cell.yaml  simulation_8cell.yaml  simulation_8cell_mask10.yaml  simulation_8cell_mask20.yaml  simulation_8cell_mask30.yaml  simulation_8cell_mask40.yaml  simulation_8cell_mask60.yaml  simulation_8cell_mask70.yaml  simulation_8cell_mask80.yaml  simulation_8cell_mask90.yaml
plexus/ssl_training/models/: plexus_model.py  plexus_model_ablation.py
(+10 files in other folders)
